# ubid-bedford

./: .gitignore  main.py  polygon_map.html  polygon_map_1.html  pyproject.toml
buildingid/: __init__.py  code.py
notebooks/: 00_dataset_openmap.ipynb  00_get_planetary_data.ipynb  00_get_westchester_data.ipynb  01_explore.ipynb  01_normalize_projections.ipynb  02_map_buildings_to_parcels.ipynb  03_create_ubid.ipynb  03_visualize.ipynb  dataset_ms_map.ipynb  dataset_openmap.ipynb  latlong_to_quadkey.ipynb  planetcompdemo.ipynb  scratch.ipynb  westchester_parcel_building_analysis copy.ipynb  westchester_parcel_building_analysis.ipynb
pymodule/: file_ops.py  folium_plots.py  gis_helpers.py
