[project]
name = "bedford-ubid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adlfs>=2025.8.0",
    "contextily>=1.6.2",
    "dask-geopandas>=0.5.0",
    "deltalake>=1.1.4",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "overpy>=0.7",
    "pandas>=2.3.2",
    "planetary-computer>=1.0.0",
    "plotly>=6.3.0",
    "pyarrow>=21.0.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "spark>=0.2.1",
    "xlwings>=0.33.15",
]
